Initial commit for portfolio

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
 
     <!-- begin SEO -->
-    <title>Your Name | Your Name</title>
-    <meta name="title" content="Your Name">
+    <title>Priyal Tripathi | Bioinformatively Priyal</title>
+    <meta name="title" content="Priyal Tripathi">
 
-    <meta property="og:title" content="Your Name">
-    <meta property="og:site_name" content="Your Name">
-    <meta property="og:description" content="Your Name | Your Name">
+    <meta property="og:title" content="Priyal Tripathi">
+    <meta property="og:site_name" content="Priyal Tripathi">
+    <meta property="og:description" content="Priyal Tripathi | Bioinformatively Priyal">
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="/">
     <meta property="og:type" content="website">
-    <meta property="twitter:title" content="Your Name">
+    <meta property="twitter:title" content="Priyal Tripathi">
 
-    <meta name="description" content="Your Name | Your Name">
-    <meta name="keywords" content="Your Name, Personal, Website">
+    <meta name="description" content="Priyal Tripathi | Priyal Tripathi">
+    <meta name="keywords" content="Priyal Tripathi, Personal, Website">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="/">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="EN">
     <meta name="revisit-after" content="30 days">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Priyal Tripathi">
     <!-- end SEO -->
 
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
@@ -59,32 +59,32 @@
                         <!-- <img class="rounded-circle" style="border:solid var(--blue-medium) 3px; width:100%"
                         src="/assets/img/rochana_copy.jpg" alt="Card image cap"> -->
                         <img class="rounded-circle mx-auto d-block mb-1"
-                            style="border:solid rgba(0, 119, 182, 0.8) 2px; width:60%; max-width: 250px;"
+                            style="border:solid rgba(0, 0, 0, 0.8) 2px; width:60%; max-width: 250px;"
                             src="/assets/img/Lemos_avatar.png" alt="Card image cap">
 
                         <div class="card-body">
                             <h4 class="text-center mb-0"
                                 style="color: var(--blue-medium);font-family: 'Ubuntu Sans', sans-serif; font-size: 1.75rm; max-width: 100%">
-                                Your Name</h4>
+                                Priyal Tripathi</h4>
                             <!-- <h6 class="text-center mb-2" style="font-size: 0.85rm"><small>rochana@cs.odu.edu</small></h6> -->
-                            <p class="text-center mb-4">A short bio with affiliation</p>
-
+                            <p class="text-center mb-0">B.Sc Life Sciences</p>
+                            <p class="text-center mb-4">Bioinformatics Enthusiast</p>
                             <div class="">
                                 <p>
                                     <!-- <ul class="social-icons text-center text-md-left"> -->
                                 <ul class="social-icons pl-5 pl-md-0">
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
-                                                class="mr-3 fa-fw fa-solid fa-location-dot" aria-hidden="true"></i>
-                                            Address</a></li>
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
-                                                class="mr-3 fa fa-fw fa-school" aria-hidden="true"></i> University</a>
+                                    <li class="pl-4 pl-md-5"><a href="https://www.maitreyi.ac.in/" target="_blank"><i
+                                                class="mr-3 fa fa-fw fa-school" aria-hidden="true"></i>Maitreyi College, University Of Delhi</a>
                                     </li>
                                     <li class="pl-4 pl-md-5"><a href=""><i class="mr-3 fa-fw fa-solid fa-globe"
                                                 aria-hidden="true"></i> Website</a></li>
-                                    <li class="pl-4 pl-md-5"><a href="mailto:" target="_blank"><i
-                                                class="mr-3 fa-fw fa-regular fa-envelope" aria-hidden="true"></i>
-                                            Email</a></li>
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
+                                                <li class="pl-4 pl-md-5">
+                                                    <a href="mailto:priyaltripathi2910@gmail.com" target="_blank">
+                                                        <i class="mr-3 fa-fw fa-regular fa-envelope" aria-hidden="true"></i>
+                                                        priyaltripathi2910@gmail.com
+                                                    </a>
+                                                </li>                                    
+                                    <!-- <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
                                                 class="mr-3 fa-fw fa-brands fa-google-scholar" aria-hidden="true"></i>
                                             Google Scholar</a></li>
                                     <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
@@ -92,15 +92,17 @@
                                             ResearchGate</a></li>
                                     <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
                                                 class="mr-3 fa-fw fa-brands fa-orcid" aria-hidden="true"></i> ORCID</a>
+                                    </li> -->
+                                    <li class="pl-4 pl-md-5">
+                                        <a href="https://www.linkedin.com/in/priyal-tripathi-baa54424a/" target="_blank">
+                                            <i class="mr-3 fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn
+                                        </a>
                                     </li>
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
-                                                class="mr-3 fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
-                                    </li>
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
+                                    <li class="pl-4 pl-md-5"><a href="https://github.com/priyalT" target="_blank"><i
                                                 class="mr-3 fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
-                                    <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
+                                    <!-- <li class="pl-4 pl-md-5"><a href="" target="_blank"><i
                                                 class="mr-3 fa-fw fa-brands fa-x-twitter" aria-hidden="true"></i>
-                                            Twitter</a></li>
+                                            Twitter</a></li> -->
                                 </ul>
                                 </p>
                             </div>
@@ -110,33 +112,22 @@
                 </div>
                 <div class="col-sm-8">
                     <div class="">
-                        <h4 class="font-weight-bold">About Me</h4>
-                        <p class="mb-4 text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-                            pulvinar lacinia dui pulvinar gravida. Maecenas rhoncus felis sit amet euismod porta.
-                            Vivamus id ante eleifend, porta arcu ac, egestas libero. Nulla facilisi. Fusce sit amet diam
-                            sit amet dui tincidunt imperdiet. Aenean eget fermentum nulla. Duis lacinia blandit turpis
-                            quis viverra. In eleifend consequat lectus, et aliquet ipsum ultricies id. Integer hendrerit
-                            et felis id blandit. In nec blandit quam.Suspendisse vitae dui at nisl sodales porttitor.
-                            Suspendisse potenti. Morbi placerat nunc vel condimentum dignissim. Mauris tristique metus
-                            sit amet erat placerat, ac elementum nunc vulputate. Fusce ultrices risus eget metus
-                            posuere, et pulvinar est pulvinar. Vivamus eleifend sagittis lectus, nec tempus mi semper
-                            et. Phasellus sit amet fringilla magna, eget dignissim neque. Curabitur non ipsum metus.
-                            Donec auctor sed velit eu vestibulum. Aenean pellentesque fermentum varius. Cras dapibus sed
-                            massa sit amet finibus. Maecenas posuere suscipit ligula at imperdiet.Aliquam aliquet
-                            feugiat neque at molestie. Nunc vel euismod orci. Vestibulum magna tortor, pretium et
-                            eleifend eu, ornare ut nunc. Donec ullamcorper orci nibh, non imperdiet justo scelerisque
-                            nec. Nam vehicula dignissim eros, eu varius leo aliquet sed. Maecenas fermentum purus et sem
-                            condimentum elementum.
+                        <h4 class="font-weight-bold">About Me!</h4>
+                        <p class="mb-4 text-justify">I am Priyal Tripathi, a B.Sc Life Sciences student at Maitreyi
+                            College, University of Delhi. I am a bioinformatics and computational biology enthusiast with an interest in translational research in 
+                            cancer genomics, as well as computational neuroscience. As I'm just a beginner, this website is not only my portfolio
+                            but also a blog! I plan on posting projects and the methodologies I used within them, as well as reviews of books and 
+                            courses that I take up.</p>
+                        <p class="mb-4 text-justify"> When I'm not nosedeep into bioinformatics, you can find me curled up with my dog Oscar—who may be six years old, but in my mind, he's still a puppy! 
+                            My love for animals runs deep, and one of my biggest life goals is to ensure they feel loved, safe, and happy. This passion even led me to establish a college society dedicated to animal welfare—Nepenthe—but that's a story for another time.
+                        </p>
 
                         </p>
 
                         <h4 class="mt-4 font-weight-bold">Research</h4>
-                        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-                            pulvinar lacinia dui pulvinar gravida. Maecenas rhoncus felis sit amet euismod porta.
-                            Vivamus id ante eleifend, porta arcu ac, egestas libero. Nulla facilisi. Fusce sit amet diam
-                            sit amet dui tincidunt imperdiet.</p>
+                        <p class="text-justify">I am currently very passionate about translational research particularly in cancer genomics as well as neuroscience.</p>
 
-                        <div class="text-center">
+                        <!-- <div class="text-center">
                             <button type="button" class="mt-2 btn btn-blue btn-sm"><a href="" target="_blank">Research
                                     Group Webpage<i class="ml-2 fa-solid fa-globe"></i></a></button>
 
@@ -147,52 +138,36 @@
                             <button type="button" class="ml-4 mt-2 btn btn-blue btn-sm"><a href=""
                                     target="_blank">Research Group GitHub <i class="ml-2 fa-brands fa-github"></i></a>
                             </button>
-                        </div>
+                        </div> -->
 
                         <p class="mt-4 text-justify"><span class="font-weight-bold">Research Interests:</span>
-                            Interest_1, Interest_2, Interest_3, Interest_4, Interest_5, Interest_6, Interest_7</p>
+                            Bioinformatics, Translational research, Cancer Genomics, Computational Neuroscience</p>
 
                         <h4 class="mt-4 font-weight-bold">News</h4>
 
                         <ul class="">
                             <small>
 
-                                <li class="mb-2"><span class="ref-journal">Month Year: </span> Paper got accepted!
-                                    "Paper Title" - Conference Name, Year</li>
-                                <li class="mb-2"><span class="ref-journal">Month Year: </span> Award Received! Award
-                                    Title, Affiliation</li>
-                                <li class="mb-2"><span class="ref-journal">Month Year: </span> Joined __________
-                                    University as a Graduate Student</li>
+                                <li class="mb-2"><span class="ref-journal">March 2025: </span> This website was created!</li>
+                                <!-- <li class="mb-2"><span class="ref-journal">Month Year: </span> Award Received! Award -->
+                                    <!-- Title, Affiliation</li> -->
+                                <!-- <li class="mb-2"><span class="ref-journal">Month Year: </span> Joined __________ -->
+                                    <!-- University as a Graduate Student</li> -->
 
                             </small>
                         </ul>
 
                         <h4 class="font-weight-bold">Bio</h4>
-                        <p class="mb-4 text-justify">Aliquam aliquet feugiat neque at molestie. Nunc vel euismod orci.
-                            Vestibulum magna tortor, pretium et eleifend eu, ornare ut nunc. Donec ullamcorper orci
-                            nibh, non imperdiet justo scelerisque nec. Nam vehicula dignissim eros, eu varius leo
-                            aliquet sed. Maecenas fermentum purus et sem condimentum elementum. Sed maximus euismod
-                            felis nec mollis. Sed nec mauris justo. Nullam sit amet purus lobortis nunc luctus volutpat.
-                            Suspendisse faucibus urna ac laoreet maximus. Vestibulum ante ipsum primis in faucibus orci
-                            luctus et ultrices posuere cubilia curae; Integer id augue mauris. Pellentesque habitant
-                            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam sed elit at nisi
-                            vulputate ornare. Sed lobortis commodo felis, et pulvinar lacus pellentesque ut. Donec vel
-                            leo a nibh cursus consequat. Nulla feugiat fringilla elit nec lacinia. Duis metus magna,
-                            lacinia vitae molestie quis, feugiat nec turpis. Proin id consectetur diam.
-                            Maecenas tincidunt mattis risus, at faucibus dolor faucibus id. Nam vitae dolor vitae nibh
-                            dignissim faucibus. Integer in luctus lectus, at sagittis lectus. Nunc posuere, erat vitae
-                            consectetur blandit, lectus quam suscipit lectus, quis luctus mauris arcu nec neque.
-                            Vestibulum a mattis risus, at efficitur urna. Phasellus erat massa, viverra nec suscipit
-                            vel, sagittis eget mi. Nullam sed tempor odio. Nullam venenatis, justo eget cursus pulvinar,
-                            orci magna pretium nulla, a rutrum orci eros eget urna.
+                        <p class="mb-4 text-justify">Bioinformatics enthusiast; Rising junior at Maitreyi College, University of Delhi, 
+                            pursuing B.Sc Life Sciences; Passionate about cancer genomics, neuroscience and AI-driven research
                         </p>
 
 
-                        <h4 class="font-weight-bold">CV & Resume</h4>
+                        <h4 class="font-weight-bold">CV</h4>
                         <div class="mb-5">
-                            <button type="button" class="mt-2 mt-2 btn btn-blue btn-sm"><a href=""
-                                    target="_blank">Resume<i class="ml-2 fa-solid fa-circle-info"></i></a> </button>
-                            <button type="button" class="ml-2 mt-2 btn btn-blue btn-sm"><a href=""
+                            <!-- <button type="button" class="mt-2 mt-2 btn btn-blue btn-sm"><a href="" -->
+                                    <!-- target="_blank">Resume<i class="ml-2 fa-solid fa-circle-info"></i></a> </button> -->
+                            <button type="button" class="ml-2 mt-2 btn btn-blue btn-sm"><a href="https://drive.google.com/file/d/1T5UUIVmuMOXW2lF9-yAZ1252PABLFwOe/view?usp=sharing"
                                     target="_blank">Curriculum Vitae<i class="ml-2 fa-regular fa-file"></i></a></button>
                         </div>
 
@@ -207,7 +182,6 @@
 
         <div id="footer">
             <footer-component></footer-component>
-            <footer-component-lemos></footer-component-lemos>
         </div>
     </div>
 
