--- a/pages/blogposts.html
+++ b/pages/blogposts.html
@@ -11,115 +11,107 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
     <link href="/assets/css/main.css" rel="stylesheet">
-    <link href="/assets/css/blogposts.css" rel="stylesheet">
+    <link href="/assets/css/projects.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/fontawesome651.all.min.css">
 
     <!-- Google Fonts CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
         rel="stylesheet">
-
+    
 </head>
-
-
 <body>
-
     <div id="page-container">
         <header-component></header-component>
+
         <div class="container mt-4">
-            <h5><b>__ Blog Posts ______________</b></h5>
-            <h4 class="mt-4"><b>2023</b></h4>
+            <h5 class="text-center font-weight-bold" style="font-size: 3rem; color: #111;">
+                <img src="https://i.gifer.com/Oxh7.gif" 
+                     alt="Cute GIF" width="50" height="50">
+                Bioinformatively Priyal
+                <img src="https://i.gifer.com/Oxh7.gif" 
+                     alt="Cute GIF" width="50" height="50">
+            </h5>
+            <h4 class="mt-4 font-weight-bold">2025</h4>
+        </div>
 
-            <!-- post -->
+        <!-- Blog Posts -->
+        <div class="container">
+            <!-- Post 1 -->
             <div class="mt-3 card">
                 <div class="card-body">
-                    <div class="row mt-2 mt-md-0">
+                    <div class="row">
                         <div class="col-5 col-md-2">
-                            <img class="card-img-top" src="/assets/img/blogs/blog_1.jfif"
-                                alt="Card image">
-
+                            <img class="card-img-top" src="/assets/img/blogs/blog_1.jfif" alt="Blog Image">
                         </div>
                         <div class="col-7 col-md-10">
-                            <h4 class="card-title mb-0 responsive-text"><a class="blog-name"
-                                    href=""
-                                    target="_blank">Blogpost Title 1</a> </h4>
+                            <h4 class="card-title mb-0"><a class="blog-name" href="#" target="_blank">Blogpost Title 1</a></h4>
                             <h6 class="small-lemos mt-1">(29<sup>th</sup> December, 2023)</h6>
-                            <p class="card-text mt-2 mb-2 text-justify small text-truncate">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at. Aenean auctor erat sed facilisis imperdiet. In elit ipsum, volutpat eget sem non, rutrum volutpat lorem. Donec lobortis rutrum auctor. Cras condimentum diam sit amet ligula semper faucibus. Integer lobortis dictum est placerat rutrum. Duis at lacinia urna. Proin convallis vitae nunc at viverra. Sed ac est vitae lacus suscipit scelerisque.
+                            <p class="card-text mt-2 text-justify small">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at.
                             </p>
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Post 2 -->
+            <div class="mt-3 card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-5 col-md-2">
+                            <img class="card-img-top" src="/assets/img/blogs/blog_3.jfif" alt="Blog Image">
+                        </div>
+                        <div class="col-7 col-md-10">
+                            <h4 class="card-title mb-0"><a class="blog-name" href="#" target="_blank">Blogpost Title 2</a></h4>
+                            <h6 class="small-lemos mt-1">(29<sup>th</sup> December, 2023)</h6>
+                            <p class="card-text mt-2 text-justify small">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- post -->
+            <h4 class="mt-4 font-weight-bold">2022</h4>
+
+            <!-- Post 3 -->
             <div class="mt-3 card">
                 <div class="card-body">
-                    <div class="row mt-2 mt-md-0">
+                    <div class="row">
                         <div class="col-5 col-md-2">
-                            <img class="card-img-top" src="/assets/img/blogs/blog_3.jfif"
-                                alt="Card image">
-
+                            <img class="card-img-top" src="/assets/img/blogs/blog_2.jfif" alt="Blog Image">
                         </div>
                         <div class="col-7 col-md-10">
-                            <h4 class="card-title mb-0 responsive-text"><a class="blog-name"
-                                    href=""
-                                    target="_blank">Blogpost Title 2</a> </h4>
-                            <h6 class="small-lemos mt-1">(29<sup>th</sup> December, 2023)</h6>
-                            <p class="card-text mt-2 mb-2 text-justify small text-truncate">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at. Aenean auctor erat sed facilisis imperdiet. In elit ipsum, volutpat eget sem non, rutrum volutpat lorem. Donec lobortis rutrum auctor. Cras condimentum diam sit amet ligula semper faucibus. Integer lobortis dictum est placerat rutrum. Duis at lacinia urna. Proin convallis vitae nunc at viverra. Sed ac est vitae lacus suscipit scelerisque.
-                            </p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <h4 class="mt-4"><b>2022</b></h4>
-
-            <!-- post -->
-            <div class="mt-3 card">
-                <div class="card-body">
-                    <div class="row mt-2 mt-md-0">
-                        <div class="col-5 col-md-2">
-                            <img class="card-img-top" src="/assets/img/blogs/blog_2.jfif" alt="Card image">
-
-                        </div>
-                        <div class="col-7 col-md-10">
-                            <h4 class="card-title mb-0 responsive-text"><a class="blog-name"
-                                    href=""
-                                    target="_blank">Blogpost Title 3</a> </h4>
+                            <h4 class="card-title mb-0"><a class="blog-name" href="#" target="_blank">Blogpost Title 3</a></h4>
                             <h6 class="small-lemos mt-1">(26<sup>th</sup> July, 2021)</h6>
-                            <p class="card-text mt-2 mb-2 text-justify small text-truncate">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at. Aenean auctor erat sed facilisis imperdiet. In elit ipsum, volutpat eget sem non, rutrum volutpat lorem. Donec lobortis rutrum auctor. Cras condimentum diam sit amet ligula semper faucibus. Integer lobortis dictum est placerat rutrum. Duis at lacinia urna. Proin convallis vitae nunc at viverra. Sed ac est vitae lacus suscipit scelerisque.
+                            <p class="card-text mt-2 text-justify small">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius luctus urna, et imperdiet urna semper at.
                             </p>
-
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-        <div id="footer">
 
-            <footer-component></footer-component>
-            <footer-component-lemos></footer-component-lemos>
-        </div>
     </div>
 
+    <div id="footer">
 
-    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="/assets/vendor/jquery/jquery.slim.min.js"></script>
-    <script src="/assets/vendor/bootstrap/js/popper.min.js"></script>
-    <script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- <script src="/assets/js/main.js"></script> -->
-    <script src="/components/header.js" type="text/javascript" defer></script>
-    <script src="/components/footer.js" type="text/javascript"></script>
-    <script src="/components/footer-lemos.js" type="text/javascript"></script>
-    <script src="/assets/js/fontawesome651all.min.js" type="text/javascript" defer></script>
+        <footer-component></footer-component>
+        <!-- <footer-component-lemos></footer-component-lemos> -->
+    </div>
+</div>
 
 
+<!-- jQuery and Bootstrap Bundle (includes Popper) -->
+<script src="/assets/vendor/jquery/jquery.slim.min.js"></script>
+<script src="/assets/vendor/bootstrap/js/popper.min.js"></script>
+<script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<script src="/assets/js/main.js"></script>
+<script src="/components/header.js" type="text/javascript" defer></script>
+<script src="/components/footer.js" type="text/javascript"></script>
+<script src="/components/footer-lemos.js" type="text/javascript"></script>
+<script src="/assets/js/fontawesome651all.min.js" type="text/javascript" defer></script>
 </body>
-
 </html>
