--- a/pages/education.html
+++ b/pages/education.html
@@ -29,14 +29,13 @@
     <div id="page-container">
         <header-component></header-component>
         <div class="container mt-4" id="content-wrap">
-            <h5 class="mb-4"><b>__ Education ________________</b></h5>
+            <h5 class="mb-4"><b> Education </b></h5>
 
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-body">
                     <div class="row mt-2">
                         <div class="col-md-2 text-center">
                             <img class="card-img-top" src="/assets/img/education/uni_logo_1.jpg" alt="Card image">
-
                         </div>
                         <div class="col-md-10">
                             <h4 class="card-title mt-3 mt-md-0 mb-0 text-center text-md-left">University Name</h4>
@@ -75,7 +74,6 @@
                                     <li class="pl-4">Course 5</li>
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <!-- <li class="pl-4"></li>  -->
                                 </div>
                             </div>
                             </p>
@@ -109,77 +107,89 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="mt-3 card">
                 <div class="card-body">
                     <div class="row mt-2">
                         <div class="col-md-2 text-center">
                             <img class="card-img-top" src="/assets/img/education/uni_logo_2.jpg" alt="Card image">
-
                         </div>
                         <div class="col-md-10">
-                            <h4 class="card-title mt-3 mt-md-0 mb-0 text-center text-md-left">University Name</h4>
+                            <h4 class="card-title mt-3 mt-md-0 mb-0 text-center text-md-left">University Of Delhi</h4>
                             <h6 class="small-lemos text-center text-md-left"><span
-                                    class="span-lemos pr-2">Address</span> (End_Month Year - Start_Month Year)</h6>
-                            <h6 class="card-subtitle mt-2 text-center text-md-left mb-3">B.Sc. in Computer
-                                Science</small></h6>
+                                    class="span-lemos pr-2">South Campus</span> August 2023-August 2027</h6>
+                            <h6 class="card-subtitle mt-2 text-center text-md-left mb-3">B.Sc. in Life Sciences</small></h6>
                             <p class="card-text mt-2 text-justify">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pulvinar lacinia dui
-                                pulvinar gravida. Maecenas rhoncus felis sit amet euismod porta. Vivamus id ante
-                                eleifend, porta arcu ac, egestas libero. Nulla facilisi. Fusce sit amet diam sit amet
-                                dui tincidunt imperdiet. Aenean eget fermentum nulla. Duis lacinia blandit turpis quis
-                                viverra. In eleifend consequat lectus, et aliquet ipsum ultricies id. Integer hendrerit
-                                et felis id blandit. In nec blandit quam.
+                                During my B.Sc. in Life Sciences at the University of Delhi, I am working towards developing a strong foundation in 
+                                molecular biology, genetics, computer science and bioinformatics. My coursework covers key areas such as genomics, computational biology, database management,
+                                Python and R equipping me with both theoretical knowledge and hands-on experience in data-driven biological research. I 
+                                actively engage in bioinformatics projects and research internships, especially those including cancer genomics and AI-driven analysis. These experiences have reinforced 
+                                my commitment to translational research, and I aspire to 
+                                integrate computational methods into cancer biology as well as neuroscience for meaningful scientific advancements.
                             </p>
-                            <p class="mt-0 pt-0"><b>Supervisor :</b> Name </p>
-                            <p><b>Core Courses :</b>
-                            <div class="row">
-                                <div class="col-12 col-md-5">
-                                    <li class="pl-4">Course 1</li>
+                            <p><b>Core Courses :</b></p>
+                                <div class="row">
+                                    <div class="col-12 col-md-5">
+                                        <li class="pl-4">Statistics with 'R' (NTGR: 10)</li>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <li class="pl-4">Plant Diversity and Systematics (NTGR: 8)</li>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <li class="pl-4">Course 2</li>
+                                <div class="row">
+                                    <div class="col-12 col-md-5">
+                                        <li class="pl-4">Data Analysis and Visualization using Python (NTGR: 9)</li>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <li class="pl-4">Genetics and Molecular Biology (NTGR: 8)</li>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 col-md-5">
-                                    <li class="pl-4">Course 3</li>
+                                <div class="row">
+                                    <div class="col-12 col-md-5">
+                                        <li class="pl-4">Cell and Developmental Biology of Animals (NTGR: 8)</li>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <li class="pl-4">Diversity of Animals (NTGR: 8)</li>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <li class="pl-4">Course 4</li>
+                                <div class="row">
+                                    <div class="col-12 col-md-5">
+                                        <li class="pl-4">Basic Concepts of Organic Chemistry (NTGR: 8)</li>
+                                    </div>
+                                    <div class="col-12 col-md-6">
+                                        <li class="pl-4">Chemical Bonding and Elements in Biological Systems (NTGR: 8)</li>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 col-md-5">
-                                    <li class="pl-4">Course 5</li>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <!-- <li class="pl-4"></li>  -->
-                                </div>
-                            </div>
-                            </p>
-                            <p><b>Activities :</b>
-                            <div class="row">
+                                <p class="mt-4"><b>Activities :</b></p>
+                                <div class="row">
                                 <div class="col-12">
                                     <ul class="pb-0 mb-1">
-                                        <li class="activity-lemos"><span class="activity-names">Activity 1 :</span> <a
-                                                href="" target="_blank">Reference Link</a></li>
+                                        <li class="activity-lemos"><span class="activity-names"> Undergraduate Researcher at IIT Roorkee </span> <a
+                                                href="https://github.com/priyalT/Multicluster-and-Survival-Analysis" target="_blank">Reference Link</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
                                     <ul class="pb-0 mb-1">
-                                        <li class="activity-lemos"><span class="activity-names">Activity 2 :</span> <a
-                                                href="" target="_blank">Reference Link</a> </li>
+                                        <li class="activity-lemos"><span class="activity-names">Oral Presenter at Equinox 2024, Annual International Conference organized by the Centre for Research at Maitreyi College, University of Delhi  </span> <a
+                                                href="https://drive.google.com/file/d/1JlJnVrBG2HCuYZg1aOGwobYBqOwsML5m/view?usp=sharing" target="_blank">Reference Link</a> </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
                                     <ul class="pb-0 mb-1">
-                                        <li class="activity-lemos"><span class="activity-names">Activity 3 :</span> <a
+                                        <li class="activity-lemos"><span class="activity-names">Summer Intern at Maitreyi College, University Of Delhi </span> <a
+                                                href="https://drive.google.com/file/d/1DxB6w9WsneF0076bKc1FL-4IcvcmwdE4/view?usp=sharing" target="_blank">Reference Link</a> </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul class="pb-0 mb-1">
+                                        <li class="activity-lemos"><span class="activity-names">Annual Research Intern at Maitreyi College, University Of Delhi</span> <a
                                                 href="" target="_blank">Reference Link</a> </li>
                                     </ul>
                                 </div>
@@ -207,7 +217,7 @@
 
         <div id="footer">
             <footer-component></footer-component>
-            <footer-component-lemos></footer-component-lemos>
+            <!-- <footer-component-lemos></footer-component-lemos> -->
         </div>
     </div>
 
