--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,10 +27,10 @@
     <div id="page-container">
         <header-component></header-component>
         <div class="container mt-4">
-            <h5><b>__ Projects _____________________</b></h5>
+            <h5><b> Projects </b></h5>
 
             <!-- project 1 -->
-            <div class="mt-3 card">
+            <!-- <div class="mt-3 card">
                 <div class="card-body">
                     <div class="row mt-2 mt-md-0">
                         <div class="col-md-2 text-center">
@@ -73,11 +73,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
             <!-- project 2 -->
-            <div class="mt-3 card">
+            <!-- <div class="mt-3 card">
                 <div class="card-body">
                     <div class="row mt-2 mt-md-0">
                         <div class="col-md-2 text-center">
@@ -117,14 +117,14 @@
                     </div>
                 </div>
             </div>
-
+ -->
 
         </div>
 
         <div id="footer">
 
             <footer-component></footer-component>
-            <footer-component-lemos></footer-component-lemos>
+            <!-- <footer-component-lemos></footer-component-lemos> -->
         </div>
     </div>
 
