--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                             cancer genomics, as well as computational neuroscience. As I'm just a beginner, this website is not only my portfolio
                             but also a blog! I plan on posting projects and the methodologies I used within them, as well as reviews of books and 
                             courses that I take up.</p>
-                        <p class="mb-4 text-justify"> When I'm not nosedeep into bioinformatics, you can find me curled up with my dog Oscar—who may be six years old, but in my mind, he's still a puppy! 
-                            My love for animals runs deep, and one of my biggest life goals is to ensure they feel loved, safe, and happy. This passion even led me to establish a college society dedicated to animal welfare—Nepenthe—but that's a story for another time.
+                        <p class="mb-4 text-justify"> When I'm not nosedeep into bioinformatics, you can find me curled up with my dog Oscar. My love for animals runs deep, and one of my biggest life goals is to ensure they feel loved, safe, and happy. This passion even led me to establish a college society dedicated to animal welfare—Nepenthe—but that's a story for another time.
                         </p>
 
                         </p>
